--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>pharmababa</title>
-  <base href="/">  
+  <base href="./">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">  
   <link rel="stylesheet" href="assets/plugins/jqueryui/jquery-ui.min.css">
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/plugins/owlcarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" href="assets/css/pharmababa.css">
   <link rel="icon" type="image/png" href="assets/img/favicon.png" />
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=your_api_key_here"></script>
   <title>Pharmababa</title>
 
 
